# itex

./: .gitignore  .tokeignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  itex-build.toml  justfile  rustfmt.toml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  rust.yml  ubuntu-latest.yml  windows.latest.yml
itex-derive/: Cargo.toml
itex-derive/src/: empty_struct.rs  get.rs  lib.rs  merge_global_local.rs  print_functions.rs  set.rs  set_functions.rs
itex-templates/apa/: Makefile  export.bib  itex-info.json  itex-info.toml  main.tex
itex-templates/default/: Makefile  itex-info.json
itex-templates/electron/: itex-info.json  itex-info.toml  main.tex
itex-templates/iSci/: Makefile  itex-info.json  itex-info.toml  main.bib  main.tex
itex-templates/tmlr/: Makefile  main.tex  math_commands.tex  references.bib  tmlr.sty
packaging/windows/: installer.ps1
scripts/: gen-release.py  lgithub.py  libgithub.py  litex.py  update-release.py
src/: build.rs  builder.rs  clean.rs  cli.rs  count.rs  file.rs  get.rs  info.rs  list.rs  macros.rs  main.rs  options.rs  parse.rs  path.rs  prelude.rs  runtime_helper.rs  set.rs  settings.rs  template.rs
src/config/: cli.rs  global.rs  mod.rs
src/init/: files.rs  mod.rs  template_info.rs
src/init/template_path/: mod.rs  os_search.rs
src/parser/: build.rs  clean.rs  count.rs  info.rs  init.rs  list.rs  mod.rs  options.rs  updater.rs
src/programs/: bibtex.rs  mod.rs  pdflatex.rs  texcount.rs
src/resolve/: mod.rs  os_search.rs
src/runtime_helper/: mod.rs
src/template/: file.rs  files.rs  mod.rs  search_for_templates.rs  template_info.rs  template_updater.rs
src/template/template_info/: mod.rs  tests.rs
src/template/template_path/: mod.rs  os_search.rs  template_path.rs
src/template/template_updater/: mod.rs  target_location.rs
src/template_updater/: mod.rs  target_location.rs  template_url.rs
src/updater/: mod.rs  target_location.rs  template_url.rs
template_updater/: Cargo.toml  lib.rs  target_location.rs
templates/iSci/: main.bib
test_resources/default/: itex-build.toml  itex-info.json  itex-info.toml  main.tex
test_resources/test_cases/init/default_config/: .gitignore  placeholder.md
test_resources/test_cases/settings/get/: itex-build.toml
test_resources/test_cases/settings/set/: itex-build.toml
test_resources/test_cases/settings/set_tex_filename/: itex-build.toml
wix/: main.wxs
