[package]
name = "itex"
authors = ["oneElectron <one.electron109@protonmail.com>"]
description = "Initialize a LaTex project inside a folder instantly"
readme = "README.md"
license = "GPL-3.0"
version = "2.0.0-dev"
edition = "2021"
repository = "https://github.com/oneElectron/itex"

[dependencies]


[features]
default = ["updater"]
updater = []

[profile.dev]
opt-level = 0
strip = false
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
rpath = false

[profile.release]
opt-level = 2
strip = true
debug = false
lto = true
