[package]
name = "itex-derive"
authors = ["oneElectron <one.electron109@protonmail.com>"]
description = "Initialize a LaTex project inside a folder instantly"
readme = "README.md"
license = "GPL-3.0"
version = "1.4.0-dev"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
