[package]
name = "template_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "template_updater"
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] } 
zip = "0.6.4"


