[package]
name = "template_updater"
version = "1.0.0"
edition = "2021"

[lib]
name = "template_updater"
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking"] } 
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
url = "2.3.1"
zip = { version = "0.6.4" }



